Exporting the model

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,8 @@
     "modelo = crear_modelo_cnn()\n",
     "\n",
     "# Compilar el modelo\n",
+    "\n",
+    "\n",
     "modelo.compile(optimizer='adam',\n",
     "               loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "               metrics=['accuracy'])"
@@ -131,18 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+    "\n",
     "datos_entrenamiento, datos_prueba, etiquetas_entrenamiento, etiquetas_prueba = train_test_split(\n",
     "    processed_images, processed_labels, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +164,7 @@
        "array([0, 0, 0, 0, 1, 0, 0, 0, 1, 0])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,32 +175,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "2/2 [==============================] - 1s 100ms/step - loss: 1.4784 - accuracy: 0.3684\n",
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniconda/base/envs/dataScience/lib/python3.10/site-packages/keras/src/backend.py:5714: UserWarning: \"`sparse_categorical_crossentropy` received `from_logits=True`, but the `output` argument was produced by a Softmax activation and thus does not represent logits. Was this intended?\n",
+      "  output, from_logits = _get_logits(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/2 [==============================] - 1s 115ms/step - loss: 2.3758 - accuracy: 0.3421\n",
       "Epoch 2/5\n",
-      "2/2 [==============================] - 1s 99ms/step - loss: 1.1996 - accuracy: 0.4474\n",
+      "2/2 [==============================] - 1s 149ms/step - loss: 1.1354 - accuracy: 0.4211\n",
       "Epoch 3/5\n",
-      "2/2 [==============================] - 1s 96ms/step - loss: 1.0688 - accuracy: 0.7368\n",
+      "2/2 [==============================] - 1s 109ms/step - loss: 0.7272 - accuracy: 0.7368\n",
       "Epoch 4/5\n",
-      "2/2 [==============================] - 1s 100ms/step - loss: 0.4717 - accuracy: 0.7632\n",
+      "2/2 [==============================] - 1s 103ms/step - loss: 0.4240 - accuracy: 0.8947\n",
       "Epoch 5/5\n",
-      "2/2 [==============================] - 1s 100ms/step - loss: 0.3935 - accuracy: 0.8684\n"
+      "2/2 [==============================] - 1s 130ms/step - loss: 0.4536 - accuracy: 0.8684\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x29e0d6200>"
+       "<keras.src.callbacks.History at 0x29e2b7700>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 116ms/step - loss: 0.7796 - accuracy: 0.8000\n",
-      "Pérdida: 0.779556155204773\n",
-      "Precisión: 0.800000011920929\n"
+      "1/1 [==============================] - 0s 60ms/step - loss: 1.2165 - accuracy: 0.4000\n",
+      "Pérdida: 1.216521978378296\n",
+      "Precisión: 0.4000000059604645\n"
      ]
     }
    ],
@@ -232,6 +249,22 @@
     "#predicciones = modelo.predict(datos_nuevas_imagenes)\n",
     "#etiqueta_predicha = etiquetas_clases[np.argmax(predicciones)]\n",
     "#print('Etiqueta predicha:', etiqueta_predicha)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exporting the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo.save('cnn_model.h5')"
    ]
   }
  ],
