--- a/model.ipynb
+++ b/model.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:TensorFlow Decision Forests 1.5.0 is compatible with the following TensorFlow Versions: ['2.13.0']. However, TensorFlow 2.13.0-rc0 was detected. This can cause issues with the TF API and symbols in the custom C++ ops. See the TF and TF-DF compatibility table at https://github.com/tensorflow/decision-forests/blob/main/documentation/known_issues.md#compatibility-table.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
     "from sklearn.model_selection import train_test_split\n",
+    "import tensorflowjs as tfjs\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +173,7 @@
        "array([0, 0, 0, 0, 1, 0, 0, 0, 1, 0])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -197,24 +206,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/2 [==============================] - 1s 115ms/step - loss: 2.3758 - accuracy: 0.3421\n",
+      "2/2 [==============================] - 1s 98ms/step - loss: 0.5704 - accuracy: 0.6842\n",
       "Epoch 2/5\n",
-      "2/2 [==============================] - 1s 149ms/step - loss: 1.1354 - accuracy: 0.4211\n",
+      "2/2 [==============================] - 1s 106ms/step - loss: 12.3973 - accuracy: 0.6842\n",
       "Epoch 3/5\n",
-      "2/2 [==============================] - 1s 109ms/step - loss: 0.7272 - accuracy: 0.7368\n",
+      "2/2 [==============================] - 1s 114ms/step - loss: 13.6935 - accuracy: 0.3158\n",
       "Epoch 4/5\n",
-      "2/2 [==============================] - 1s 103ms/step - loss: 0.4240 - accuracy: 0.8947\n",
+      "2/2 [==============================] - 1s 110ms/step - loss: 2.4445 - accuracy: 0.3421\n",
       "Epoch 5/5\n",
-      "2/2 [==============================] - 1s 130ms/step - loss: 0.4536 - accuracy: 0.8684\n"
+      "2/2 [==============================] - 1s 112ms/step - loss: 0.6291 - accuracy: 0.6842\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x29e2b7700>"
+       "<keras.src.callbacks.History at 0x33eee4a00>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 60ms/step - loss: 1.2165 - accuracy: 0.4000\n",
-      "Pérdida: 1.216521978378296\n",
-      "Precisión: 0.4000000059604645\n"
+      "1/1 [==============================] - 0s 106ms/step - loss: 0.7568 - accuracy: 0.8000\n",
+      "Pérdida: 0.7567907571792603\n",
+      "Precisión: 0.800000011920929\n"
      ]
     }
    ],
@@ -260,11 +269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniconda/base/envs/dataScience/lib/python3.10/site-packages/keras/src/engine/training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
    "source": [
-    "modelo.save('cnn_model.h5')"
+    "#modelo.save('cnn_model.h5')\n",
+    "tfjs.converters.save_keras_model(modelo, './model')"
    ]
   }
  ],
