adding missing files

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,21 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:TensorFlow Decision Forests 1.5.0 is compatible with the following TensorFlow Versions: ['2.13.0']. However, TensorFlow 2.13.0-rc0 was detected. This can cause issues with the TF API and symbols in the custom C++ ops. See the TF and TF-DF compatibility table at https://github.com/tensorflow/decision-forests/blob/main/documentation/known_issues.md#compatibility-table.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
+    "from sklearn.metrics import f1_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflowjs as tfjs\n",
     "\n",
@@ -26,22 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Constantes\n",
-    "HEIGHT = 256\n",
-    "WIDTH = 256\n",
+    "HEIGHT = 512\n",
+    "WIDTH = 512\n",
     "CHANNELS = 3\n",
-    "NUM_EPOCHS = 5\n",
+    "NUM_EPOCHS = 8\n",
     "NUM_CLASS = 2\n",
     "tamaño_lote = 32"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +48,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>can_aceptable_12.jpg</td>\n",
+       "      <td>aceptable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>plastic_no_aceptable_11.jpg</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>plastic_no_aceptable_39.jpg</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>plastic_aceptable_43.jpg</td>\n",
+       "      <td>aceptable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>can_no_aceptable_48.jpg</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>plastic_no_aceptable_20.jpg</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>plastic_aceptable_7.jpg</td>\n",
+       "      <td>aceptable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>plastic_no_aceptable_34.jpg</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>can_aceptable_23.jpg</td>\n",
+       "      <td>aceptable</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>338</th>\n",
+       "      <td>can_aceptable_37.jpg</td>\n",
+       "      <td>aceptable</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>339 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            name   category\n",
+       "0           can_aceptable_12.jpg  aceptable\n",
+       "1    plastic_no_aceptable_11.jpg         no\n",
+       "2    plastic_no_aceptable_39.jpg         no\n",
+       "3       plastic_aceptable_43.jpg  aceptable\n",
+       "4        can_no_aceptable_48.jpg         no\n",
+       "..                           ...        ...\n",
+       "334  plastic_no_aceptable_20.jpg         no\n",
+       "335      plastic_aceptable_7.jpg  aceptable\n",
+       "336  plastic_no_aceptable_34.jpg         no\n",
+       "337         can_aceptable_23.jpg  aceptable\n",
+       "338         can_aceptable_37.jpg  aceptable\n",
+       "\n",
+       "[339 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,26 +264,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "etiquetas_entrenamiento = np.where(etiquetas_entrenamiento == 'buena', 0, 1)\n",
-    "etiquetas_prueba = np.where(etiquetas_prueba == 'buena', 0, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 1, 0, 0, 0, 1, 0])"
+       "array(['no', 'no', 'no', 'aceptable', 'aceptable', 'aceptable', 'no',\n",
+       "       'no', 'no', 'aceptable', 'no', 'aceptable', 'no', 'no',\n",
+       "       'aceptable', 'no', 'no', 'no', 'no', 'no', 'no', 'no', 'no',\n",
+       "       'aceptable', 'aceptable', 'no', 'aceptable', 'no', 'no', 'no',\n",
+       "       'no', 'no', 'no', 'aceptable', 'no', 'no', 'aceptable', 'no',\n",
+       "       'aceptable', 'no', 'aceptable', 'aceptable', 'no', 'aceptable',\n",
+       "       'aceptable', 'no', 'no', 'aceptable', 'no', 'aceptable', 'no',\n",
+       "       'aceptable', 'no', 'no', 'no', 'no', 'aceptable', 'no', 'no',\n",
+       "       'aceptable', 'no', 'no', 'aceptable', 'no', 'no', 'no',\n",
+       "       'aceptable', 'no'], dtype='<U9')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,14 +293,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etiquetas_entrenamiento = np.where(etiquetas_entrenamiento == 'aceptable', 1, 0)\n",
+    "etiquetas_prueba = np.where(etiquetas_prueba == 'no', 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0,\n",
+       "       0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1,\n",
+       "       0, 1])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "etiquetas_prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n"
+      "Epoch 1/10\n"
      ]
     },
     {
@@ -206,24 +348,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/2 [==============================] - 1s 98ms/step - loss: 0.5704 - accuracy: 0.6842\n",
-      "Epoch 2/5\n",
-      "2/2 [==============================] - 1s 106ms/step - loss: 12.3973 - accuracy: 0.6842\n",
-      "Epoch 3/5\n",
-      "2/2 [==============================] - 1s 114ms/step - loss: 13.6935 - accuracy: 0.3158\n",
-      "Epoch 4/5\n",
-      "2/2 [==============================] - 1s 110ms/step - loss: 2.4445 - accuracy: 0.3421\n",
-      "Epoch 5/5\n",
-      "2/2 [==============================] - 1s 112ms/step - loss: 0.6291 - accuracy: 0.6842\n"
+      "5/5 [==============================] - 16s 3s/step - loss: 8.7159 - accuracy: 0.5018\n",
+      "Epoch 2/10\n",
+      "5/5 [==============================] - 15s 3s/step - loss: 0.6444 - accuracy: 0.6753\n",
+      "Epoch 3/10\n",
+      "5/5 [==============================] - 16s 3s/step - loss: 0.5690 - accuracy: 0.7306\n",
+      "Epoch 4/10\n",
+      "5/5 [==============================] - 16s 3s/step - loss: 0.5029 - accuracy: 0.6790\n",
+      "Epoch 5/10\n",
+      "5/5 [==============================] - 15s 3s/step - loss: 0.3581 - accuracy: 0.8672\n",
+      "Epoch 6/10\n",
+      "5/5 [==============================] - 15s 3s/step - loss: 0.4429 - accuracy: 0.7749\n",
+      "Epoch 7/10\n",
+      "5/5 [==============================] - 15s 3s/step - loss: 0.2624 - accuracy: 0.8967\n",
+      "Epoch 8/10\n",
+      "5/5 [==============================] - 15s 3s/step - loss: 0.2373 - accuracy: 0.9262\n",
+      "Epoch 9/10\n",
+      "5/5 [==============================] - 15s 3s/step - loss: 0.1663 - accuracy: 0.9557\n",
+      "Epoch 10/10\n",
+      "5/5 [==============================] - 15s 3s/step - loss: 0.1217 - accuracy: 0.9631\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x33eee4a00>"
+       "<keras.src.callbacks.History at 0x298810220>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 106ms/step - loss: 0.7568 - accuracy: 0.8000\n",
-      "Pérdida: 0.7567907571792603\n",
-      "Precisión: 0.800000011920929\n"
+      "3/3 [==============================] - 1s 300ms/step - loss: 6.4674 - accuracy: 0.2647\n",
+      "Pérdida: 6.467443943023682\n",
+      "Precisión: 0.2647058963775635\n"
      ]
     }
    ],
@@ -261,6 +413,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "etiquetas_entrenamiento data type: <class 'numpy.ndarray'>\n",
+      "etiquetas_entrenamiento shape: (271,)\n",
+      "etiquetas_prueba data type: <class 'numpy.ndarray'>\n",
+      "etiquetas_prueba shape: (68,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"etiquetas_entrenamiento data type:\", type(etiquetas_entrenamiento))\n",
+    "print(\"etiquetas_entrenamiento shape:\", etiquetas_entrenamiento.shape)\n",
+    "\n",
+    "print(\"etiquetas_prueba data type:\", type(etiquetas_prueba))\n",
+    "print(\"etiquetas_prueba shape:\", etiquetas_prueba.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9/9 [==============================] - 4s 464ms/step\n",
+      "F1-Score on Training Data: 0.9772727272727273\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate predictions on the training data\n",
+    "y_pred_entrenamiento = modelo.predict(datos_entrenamiento)\n",
+    "\n",
+    "# Calculate predicted probabilities for the positive class\n",
+    "y_pred_entrenamiento_positive_class = y_pred_entrenamiento[:, 1]\n",
+    "\n",
+    "# Convert predicted probabilities to binary class labels\n",
+    "y_pred_entrenamiento_binary = (y_pred_entrenamiento_positive_class > 0.5).astype(int)\n",
+    "\n",
+    "# Calculate F1-Score for training data\n",
+    "f1_train = f1_score(etiquetas_entrenamiento, y_pred_entrenamiento_binary)\n",
+    "\n",
+    "print('F1-Score on Training Data:', f1_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -269,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -282,8 +488,8 @@
     }
    ],
    "source": [
-    "#modelo.save('cnn_model.h5')\n",
-    "tfjs.converters.save_keras_model(modelo, './model')"
+    "modelo.save('cnn_model.h5')\n",
+    "#tfjs.converters.save_keras_model(modelo, './model')"
    ]
   }
  ],
